# ai-agent-playground

./: .gitignore  README.md  launch.json  pyproject.toml
course/en/chapter3/: section2.ipynb
demo_store/: profiles.pkl  vectors.index
src/ai_agent_playground/: agent_deligation_simply.py  orchestrating_agent_routine_and_handoff.py  programmatic_handoff.py  pydantic_ai_graph.py  rag.py
tests/: test_main.py
